refactor: use sequenced list access for replay result